force-app/main/default/objects/Template_Page__c/Template_Page__c.object-meta.xml
<CustomObject>
    <label>DocGenius Template Page</label>
    <nameField>
        <displayFormat>DG_Page-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocGenius Template Pages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>