force-app/main/default/objects/Template_Page__c/fields/Show_Footer__c.field-meta.xml
<CustomField>
    <fullName>Show_Footer__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This Field Used to define, whether user want to display footer on page or not.</description>
    <label>Show Footer</label>
    <type>Checkbox</type>
</CustomField>