force-app/main/default/objects/Template_Page__c/fields/Show_Header__c.field-meta.xml
<CustomField>
    <fullName>Show_Header__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This Field Used to define, whether user want to display header on page or not.</description>
    <label>Show Header</label>
    <type>Checkbox</type>
</CustomField>