force-app/main/default/objects/Template_Page__c/fields/Show_Watermark__c.field-meta.xml
<CustomField>
    <fullName>Show_Watermark__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Watermark</label>
    <type>Checkbox</type>
</CustomField>