force-app/main/default/objects/Template_Page__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <label>DocGenius Template</label>
    <referenceTo>Template__c</referenceTo>
    <relationshipLabel>DocGenius Template Pages</relationshipLabel>
    <relationshipName>Template_Pages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>